--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 	"license": "0-BSD",
 	"devDependencies": {
 		"@eslint/js": "9.30.1",
+		"@graphql-codegen/cli": "^6.1.1",
+		"@graphql-codegen/typescript": "^5.0.7",
 		"@types/node": "^16.11.6",
 		"esbuild": "0.25.5",
 		"eslint-plugin-obsidianmd": "0.1.9",
@@ -24,6 +26,8 @@
 		"typescript-eslint": "8.35.1"
 	},
 	"dependencies": {
+		"@graphql-tools/schema": "^10.0.31",
+		"graphql": "^16.12.0",
 		"obsidian": "latest",
 		"open": "^11.0.0"
 	}
