--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "obsidian-aninotes",
+	"version": "0.1.0",
+	"description": "Plugin to sync AniList anime & manga lists to your obsidian vault.",
 	"main": "main.js",
 	"type": "module",
 	"scripts": {
