--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,11 @@
-{"id":"obsidian-aninotes","name":"AniNotes","version":"0.1.0","minAppVersion":"1.11.0","description":"Synchronize your AL lists with local notes.","author":"zzu1u","authorUrl":"https://github.com/zzu1u","fundingUrl":"","isDesktopOnly":false}
+{
+	"id": "obsidian-aninotes",
+	"name": "AniNotes",
+	"version": "0.1.1",
+	"minAppVersion": "1.11.0",
+	"description": "Synchronize your AL lists with local notes.",
+	"author": "zzu1u",
+	"authorUrl": "https://github.com/zzu1u",
+	"fundingUrl": "",
+	"isDesktopOnly": false
+}
