--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
 		"@eslint/js": "9.30.1",
 		"@graphql-codegen/cli": "^6.1.1",
 		"@graphql-codegen/typescript": "^5.0.7",
-		"@types/node": "^16.11.6",
+		"@graphql-tools/schema": "^10.0.31",
+		"@types/node": "^20.19.32",
 		"esbuild": "0.25.5",
 		"eslint-plugin-obsidianmd": "0.1.9",
 		"globals": "14.0.0",
+		"graphql": "^16.12.0",
 		"jiti": "2.6.1",
 		"tslib": "2.4.0",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "8.35.1",
-		"@graphql-tools/schema": "^10.0.31",
-		"graphql": "^16.12.0"
+		"typescript-eslint": "8.35.1"
 	},
 	"dependencies": {
 		"handlebars": "^4.7.8",
