--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"typescript-eslint": "8.35.1"
 	},
 	"dependencies": {
-		"handlebars": "^4.7.8",
+		"jsonata": "^2.1.0",
 		"obsidian": "latest"
 	}
 }
